Finalise receipt page styling

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ios:open": "ionic capacitor build ios",
-    "build:android:open": "ionic capacitor build android",
+    "build:ios:open": "ng build && npx cap sync ios && npx cap open ios",
+    "build:android:open": "ng build && npx cap sync android && npx cap open android",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@capacitor/android": "^6.1.2",
+    "@capacitor/android": "6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "6.1.2",
     "@capacitor/haptics": "6.0.1",
